add mocha for tests

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "playing around with node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/winniehell/nodejs-sandbox/issues"
+  },
+  "devDependencies": {
+    "mocha": "*"
   }
 }
