use specific versions for dependencies

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "url": "https://github.com/winniehell/nodejs-sandbox/issues"
   },
   "devDependencies": {
-    "coffee-script": "*",
-    "mocha": "*",
+    "coffee-script": "~1.7.1",
+    "mocha": "~1.21.4",
     "should": "~4.0.4"
   }
 }
